--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/passport": "^10.1",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.2",
-        "spatie/laravel-image-optimizer": "^1.6"
+        "spatie/laravel-image-optimizer": "^1.6",
+        "ext-gd": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
